Removed inline styles to make stylesheet more specific

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             Click the icons below to learn more!
                         </p>
                     </article>
-                    <div class="row">
+                    <div class="row" style="margin-top:40px;">
                         <div class="col-xs-8 col-sm-4">
                             <div class="about">
                                 <i class="fas fa-brain d-sm-block" data-toggle="collapse" data-target="#mind"
@@ -159,7 +159,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row" style="margin-top:40px;">
                         <div class="col-xs-8 col-sm-4">
                             <div class="about">
                                 <i class="fas fa-peace d-sm-block" data-toggle="collapse" data-target="#peace"
@@ -321,7 +321,7 @@
                     <div class="col-12">
                         <h2 class="section-header">Customer Reviews</h2>
                         <hr>
-                        <p id="reviews-description" style="margin: 40px 10px;">Want to know what our members have to say
+                        <p id="reviews-description">Want to know what our members have to say
                             about Infinity? Check out these quotes!</p>
                     </div>
                 </div>
@@ -414,7 +414,7 @@
                     <div class="row justify-content-center text-justify">
                         <!--Contact Details-->
                         <div class="col-xs-4">
-                            <ul class="nav-list justify-content-center" style="padding: 0 20px; margin-top: 25px;">
+                            <ul class="nav-list justify-content-center">
                                 <!--Address-->
                                 <li class="contact-info">
                                     <a href="https://goo.gl/maps/GCsGgcjKv2tg6coHA" target="_blank" aria-label="address">
@@ -506,7 +506,7 @@
                         </div>
                     </div>
                     <!--./contact-form-->
-                    <div class="row text-justify" style="margin-top: 60px;">
+                    <div class="row text-justify">
                         <div class="col-12">
                             <ul class="nav justify-content-center">
                                 <li>
