Added media queries for larger screens to remove excess whitespace

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         <section id="reviews" class="reviews">
             <!--Reviews Containers-->
             <div class="container-fluid reviews-container">
-                <div class="row text-center">
+                <div class="row text-center" id="reviews-row">
                     <div class="col-12">
                         <h2 class="section-header">Customer Reviews</h2>
                         <hr>
