Removed min-height sizes from sections to remove excess white space

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             <div class="container-fluid reviews-container">
                 <div class="row text-center" id="reviews-row">
                     <div class="col-12">
-                        <h2 class="section-header">Customer Reviews</h2>
+                        <h2 class="section-header" id="reviews-header">Customer Reviews</h2>
                         <hr>
                         <p id="reviews-description">Want to know what our members have to say
                             about Infinity? Check out these quotes!</p>
