Repaired media queries after testing

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                                         <h3 class="card-title mt-1">Chakra Cleansing</h3>
                                         <p class="text-muted">Mondays, 7:00pm | 90 minutes</p>
                                         <hr>
-                                        <p>Cleanse your Chakras and heal from within as an instructor walks you through
+                                        <p>Cleanse your Chakras as an instructor walks you through
                                             a series
                                             of
                                             breathing techniques followed by a guided meditation.
@@ -511,7 +511,7 @@
                             <ul class="nav justify-content-center">
                                 <li>
                                     <i class="fas fa-calendar"></i>
-                                    <span class="contact" style="margin-right: 8px;"> Open Monday - Friday</span>
+                                    <span class="contact" style="margin-right: 5px;"> Open Monday - Friday</span>
 
                                 </li>
                                 <li>
