Ran W3C tests and repaired errors

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 										<div class="card-body">
 											<h3>Vinyasa Flow</h3>
 											<p class="text-muted">Thursdays, 7:00pm | 90 minutes</p>
-											<hr>
+											<hr id="class1">
 											<p>Flow through a sequence of Sun Salutations and standing postures, linking
 												breath and movement as you improve strength and flexibility.</p>
 											<div class="signUp">
@@ -259,7 +259,7 @@
 											<div class="card-body">
 												<h3 class="card-title mt-1">Restorative Yoga</h3>
 												<p class="text-muted">Sundays, 11:00am | 60 minutes</p>
-												<hr>
+												<hr id="class3">
 												<p>Using the support of blankets, bolsters and other props, experience a
 													complete relaxation of body, mind and soul as you heal within.</p>
 												<div class="signUp">
@@ -286,7 +286,7 @@
 												<div class="card-body">
 													<h3 class="card-title mt-1">Chakra Cleansing</h3>
 													<p class="text-muted">Mondays, 7:00pm | 90 minutes</p>
-													<hr>
+													<hr id="class2">
 													<p>Cleanse your Chakras as an instructor walks you through
 														a series
 														of
