Updated card-titles to improve consistency

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 							</div>
 							<!--Card Body-->
 							<div class="card-body">
-								<h3>Vinyasa Flow</h3>
+								<h3 class="card-title mt-1">Vinyasa Flow</h3>
 								<p class="text-muted">Thursdays, 7:00pm | 90 minutes</p>
 								<hr id="class1">
 								<p>Flow through a sequence of Sun Salutations and standing postures, linking
@@ -513,7 +513,7 @@
 			<div class="row text-justify">
 				<div class="col-12">
 					<ul class="nav justify-content-center">
-						<li>
+						<li id="address">
 							<i class="fas fa-calendar"></i>
 							<span class="contact" style="margin-right: 5px;"> Open Monday - Friday</span>
 
