--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 	<!--./header-->
 
 	<!--Begin Main Page Content-->
-	<!--Data-spy, data-target and data-offset classes applied to main tag to enable scrollspy behavior -->
+	<!--Data-spy, data-target and data-offset classes enable scrollspy behavior -->
 	<main id="myPage" data-spy="scroll" data-target="navbarNav" data-offset="50">
 
-		<!--Jumbotron Section-->
+		<!-- Jumbotron Section-->
 		<section id="home" class="jumbotron-container">
 			<!--Jumbotron Overlay is defined here so overlay color can be applied in stylesheet. This element was copied from Code Institute's Project, Bootstrapping Your Next Big Idea (https://github.com/Code-Institute-Solutions/BootstrappingYourNextBigIdea-BS4)-->
 			<div class="jumbotron-overlay">&nbsp;</div>
@@ -124,7 +124,7 @@
 							Click the icons below to learn more!
 						</p>
 					</article>
-					<div class="row" style="margin-top:40px;">
+					<div class="row">
 						<div class="col-xs-8 col-sm-4">
 							<div class="about">
 								<i class="fas fa-brain d-sm-block" data-toggle="collapse" data-target="#mind"
@@ -165,7 +165,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="row" style="margin-top:40px;">
+					<div class="row">
 						<div class="col-xs-8 col-sm-4">
 							<div class="about">
 								<i class="fas fa-peace d-sm-block" data-toggle="collapse" data-target="#peace"
@@ -227,7 +227,7 @@
 					<!--Grid for Card Deck-->
 					<div class="row text-center" style="margin-top: 30px;">
 						<div class="card-deck">
-							<div class="col-xs-8 col-sm-4">
+							<div class="col xs-8 col-sm-4">
 								<!--First Card-->
 								<div class="card h-100" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100"
 									data-aos-anchor-placement="center-bottom">
@@ -255,7 +255,7 @@
 								</div>
 							</div>
 							<!--Second Card-->
-							<div class="col-xs-8 col-sm-4">
+							<div class="col xs-8 col-sm-4">
 								<div class="card h-100" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000"
 									data-aos-anchor-placement="center-bottom">
 									<div class="mx-auto">
@@ -266,7 +266,7 @@
 									<div class="card-body">
 										<h3 class="card-title mt-1">Restorative Yoga</h3>
 										<p class="text-muted">Sundays, 11:00am | 60 minutes</p>
-										<hr id="class3">
+										<hr id="class2">
 										<p>Using the support of blankets, bolsters and other props, experience a
 											complete relaxation of body, mind and soul as you heal within.</p>
 										<div class="signUp">
@@ -282,7 +282,7 @@
 								</div>
 							</div>
 							<!--Third Card-->
-							<div class="col-xs-8 col-sm-4">
+							<div class="col xs-8 col-sm-4">
 								<div class="card h-100" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000"
 									data-aos-anchor-placement="center-bottom">
 									<div class="mx-auto">
@@ -293,8 +293,8 @@
 									<div class="card-body">
 										<h3 class="card-title mt-1">Chakra Cleansing</h3>
 										<p class="text-muted">Mondays, 7:00pm | 90 minutes</p>
-										<hr id="class2">
-										<p>Cleanse your Chakras as an instructor walks you through
+										<hr id="class3">
+										<p>Cleanse your Chakras and heal from within as an instructor walks you through
 											a series
 											of
 											breathing techniques followed by a guided meditation.
@@ -324,7 +324,7 @@
 		<section id="reviews">
 			<!--Reviews Containers-->
 			<div class="container-fluid reviews-container">
-				<div class="row text-center" id="reviews-row">
+				<div class="row text-center">
 					<div class="col-12">
 						<h2 class="section-header" id="reviews-header">Customer Reviews</h2>
 						<hr>
@@ -371,8 +371,7 @@
 								<hr>
 								<!--Blockquote-->
 								<blockquote>
-									When I first joined I was worried that I wasn't flexibile, but Infinity's
-									staff
+									When I first joined I was worried that I wasn't flexibile, but Infinity's staff
 									taught me that anybody can do yoga!
 								</blockquote>
 								<!--./blockquote-->
@@ -395,8 +394,7 @@
 								<hr>
 								<!--Blockquote-->
 								<blockquote>
-									Infinity's classes taught me the tools needed to deal with day-to-day
-									stress &
+									Infinity's classes taught me the tools needed to deal with day-to-day stress &
 									anxiety. Now I'm happier than ever!
 								</blockquote>
 								<!--./blockquote-->
@@ -408,11 +406,10 @@
 			<!--./reviews-container-->
 		</section>
 
-		<!--Contact Section-->
+		<!--Contact Section Starts Here-->
 		<section id="contact">
-			<!--This container will be used to apply extra styles to this section-->
 			<div class="container-wrapper-contact">
-				<!--Contact Section Container Starts Here-->
+				<!--This container will be used to apply extra styles to this section-->
 				<div class="container-fluid">
 					<h2 class="section-header">Contact Us</h2>
 					<hr>
@@ -423,7 +420,7 @@
 					<div class="row justify-content-center text-justify">
 						<!--Contact Details-->
 						<div class="col-xs-4">
-							<ul class="nav-list justify-content-center">
+							<ul class="nav-list justify-content-center" style="padding: 0 20px; margin-top: 25px;">
 								<!--Address-->
 								<li class="contact-info">
 									<a href="https://goo.gl/maps/GCsGgcjKv2tg6coHA" target="_blank"
@@ -518,15 +515,16 @@
 						</div>
 					</div>
 					<!--./contact-form-->
-					<div class="row text-justify">
+					<!--New row for hours of operation and second set of contact details-->
+					<div class="row text-justify" style="margin-top: 60px;">
 						<div class="col-12">
 							<ul class="nav justify-content-center">
-								<li id="address">
+								<li>
 									<i class="fas fa-calendar"></i>
-									<span class="contact" style="margin-right: 5px;"> Open Monday - Friday</span>
+									<span class="contact" style="margin-right: 8px;"> Open Monday - Friday</span>
 
 								</li>
-								<li id="hours">
+								<li>
 									<i class="fas fa-clock"></i>
 									<span class="contact">11:00am - 9:00pm </span>
 								</li>
@@ -543,7 +541,7 @@
 
 	<!--Footer-->
 	<footer>
-		<!--Container for 'To Top' Icon-->
+		<!--Container for 'To Top' Icon/Button-->
 		<div class="container">
 			<div class="row text-center align-items-center">
 				<div class="col-12">
@@ -556,7 +554,7 @@
 				</div>
 			</div>
 		</div>
-		<!--./container-->
+		<!--./to-top-container-->
 
 		<!--Second Footer Container starts here-->
 		<div class="container">
@@ -639,7 +637,6 @@
 			</div>
 			<!--./social-media-links-->
 		</div>
-
 	</footer>
 	<!--./footer-->
 
